--- a/pom.xml
+++ b/pom.xml
@@ -27,20 +27,20 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/graylog-labs/syslog4j-graylog2</url>
-        <connection>scm:git:git@github.com:graylog-labs/syslog4j-graylog2.git</connection>
-        <developerConnection>scm:git:git@github.com:graylog-labs/syslog4j-graylog2.git</developerConnection>
+        <url>https://github.com/willena/syslog4j-graylog2</url>
+        <connection>scm:git:git@github.com:willena/syslog4j-graylog2.git</connection>
+        <developerConnection>scm:git:git@github.com:willena/syslog4j-graylog2.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
         <system>GitHub Issues</system>
-        <url>https://github.com/graylog-labs/syslog4j-graylog2/issues</url>
+        <url>https://github.com/willena/syslog4j-graylog2/issues</url>
     </issueManagement>
 
     <ciManagement>
         <system>Travis CI</system>
-        <url>https://travis-ci.org/graylog-labs/syslog4j-graylog2</url>
+        <url>https://travis-ci.org/willena/syslog4j-graylog2</url>
     </ciManagement>
 
     <properties>
@@ -51,12 +51,12 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
+            <id>ossrh</id>
             <name>Sonatype Nexus Snapshots</name>
-            <url>${sonatypeOssDistMgmtSnapshotsUrl}</url>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>sonatype-nexus-staging</id>
+            <id>ossrh</id>
             <name>Nexus Release Repository</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
@@ -114,10 +114,14 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.1</version>
                 <configuration>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <!--  do not run site-deploy goal, included in the default settings  -->
+                    <goals>deploy</goals>
+                    <pushChanges>false</pushChanges>
+                    <localCheckout>true</localCheckout>
+                    <connectionUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2</connectionUrl>
                 </configuration>
             </plugin>
             <plugin>
@@ -177,10 +181,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
-                        <configuration>
-                            <keyname>B1606F22</keyname>
-                        </configuration>
+                        <version>1.5</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -194,7 +195,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -207,7 +208,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
+                        <version>2.10.3</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
